# sgl

./: .gitignore  CMakeLists.txt  CMakePresets.json  sglmath.natvis  testapp.cpp
results/: desc.neon
sgl-cpp/: CMakeLists.txt
sgl-cpp/include/: sgl.h
sgl-cpp/include/context/: context.h  context_d  context_manager.h
sgl-cpp/include/math/: matrix.h  transform.h  utils.h  vector.h
sgl-cpp/include/math/internal/: matrix_internal.h  matrix_internal.inl  vector_internal.h  vector_internal.inl
sgl-cpp/include/utils/: common.h
sgl-cpp/src/: sgl.cpp  sgl.cpp.empty  transform.cpp
sgl-cpp/src/context/: context.cpp  context.h  context_manager.cpp  context_manager.h  environment_map.h  light.cpp  light.h  material.cpp  material.h  primitive.cpp  primitive.h  ray.cpp  ray.h
sgl-cpp/src/math/: matrix.h  matrix_internal.h  matrix_internal.inl  transform.h  utils.h  vector.h  vector_internal.h  vector_internal.inl
sgl-cpp/src/math/internal/: matrix_internal.h  matrix_internal.inl  vector_internal.h  vector_internal.inl
tests/: CMakeLists.txt  tst_intersections.cpp  tst_matrix.cpp  tst_vector.cpp
